--- a/back-rate-limit/build.gradle
+++ b/back-rate-limit/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+
+//	swagger3
+	implementation "org.springdoc:springdoc-openapi-ui:1.5.13"
 }
 
 tasks.named('test') {
