--- a/back-rate-limit/src/main/resources/application.properties
+++ b/back-rate-limit/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 secret-key-jwt = mySecretKey
 description-application=My application with Recaptcha v3 and Bucket4j
+
+# Recaptcha
+google.recaptcha.key.site=6LdOgMshAAAAAB-WtIBGW_xhpMPFAeZJ6PainDfT
+google.recaptcha.key.secret=6LdOgMshAAAAAD_ZnYr-VgkqepDWO2DUSrJvhPZz
+google.recaptcha.key.threshold=0.7
