back-rate-limit: cache requests locked of recaptcha. Https errors implemented

--- a/back-rate-limit/src/main/resources/application.properties
+++ b/back-rate-limit/src/main/resources/application.properties
@@ -5,3 +5,4 @@ description-application=My application with Recaptcha v3 and Bucket4j
 google.recaptcha.key.site=6LdOgMshAAAAAB-WtIBGW_xhpMPFAeZJ6PainDfT
 google.recaptcha.key.secret=6LdOgMshAAAAAD_ZnYr-VgkqepDWO2DUSrJvhPZz
 google.recaptcha.key.threshold=0.7
+recaptcha.cache.max.retry.ip=3
