--- a/recaptcha-v3-with-library/package.json
+++ b/recaptcha-v3-with-library/package.json
@@ -8,6 +8,10 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
+  "engines": {
+    "node": "16.17.0",
+    "npm": "8.15.0"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
