back-rate-limit: h2 added (in memory database)

--- a/back-rate-limit/src/main/resources/application.properties
+++ b/back-rate-limit/src/main/resources/application.properties
@@ -6,3 +6,22 @@ google.recaptcha.key.site=6LdOgMshAAAAAB-WtIBGW_xhpMPFAeZJ6PainDfT
 google.recaptcha.key.secret=6LdOgMshAAAAAD_ZnYr-VgkqepDWO2DUSrJvhPZz
 google.recaptcha.key.threshold=0.7
 recaptcha.cache.max.retry.ip=3
+
+# Database
+
+spring.sql.init.mode=always
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.jpa.hibernate.ddl-auto=none
+
+show-sql=false
+spring.jpa.show-sql=${show-sql}
+spring.jpa.open-in-view=${show-sql}
+#logging.level.org.hibernate.type=trace
+
+spring.datasource.url=jdbc:h2:file:~/test-recaptcha
+spring.datasource.username=user
+spring.datasource.password=pass
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
